--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,15 +1,20 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:fontFamily">@font/fonts</item>
+
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 
-    <style name="generalnotitle" parent="generalnotitle" tools:ignore="ResourceCycle">
-        <item name="android:windowNoTitle">true</item>
+    <style name="PaymentButton">
+        <item name="android:layout_width">64dp</item>
+        <item name="android:layout_height">64dp</item>
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:textSize">32sp</item>
+        <item name="android:background">@drawable/payment_button_background</item>
+        <item name="android:gravity">center</item>
     </style>
+
 </resources>
