--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_payment_fragment"
-        android:name="com.hedie.eyemobile.feature.presentation.view.PaymentFragment"
+        android:name="com.hedie.eyemobile.feature.presentation.view.payment.PaymentFragment"
         android:label="PaymentFragment"
         tools:layout="@layout/fragment_payment" />
 
