--- a/app/src/main/res/layout/fragment_payment_amount_section.xml
+++ b/app/src/main/res/layout/fragment_payment_amount_section.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:textSize="48sp"
+        android:fontFamily="@font/din_condensed_bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/amountLabel"
         app:layout_constraintEnd_toStartOf="@+id/amountLabel"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="64sp"
+        android:fontFamily="@font/din_condensed_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/currencyLabel"
         app:layout_constraintTop_toTopOf="parent"
@@ -34,6 +36,7 @@
         android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="@string/payment_description"
+        android:fontFamily="@font/din_condensed_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/amountLabel" />
