--- a/app/src/main/res/layout/activity_receipt.xml
+++ b/app/src/main/res/layout/activity_receipt.xml
@@ -27,14 +27,16 @@
         android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="@string/payment_success"
+        android:fontFamily="@font/din_condensed_bold"
+        android:textColor="@color/colorWhite"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toEndOf="@+id/img_finish"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/img_finish"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,21 +47,27 @@
         android:id="@+id/img_logo"
         android:layout_width="0dp"
         android:layout_height="20dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="62dp"
-        android:layout_marginEnd="50dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="24dp"
         android:scaleType="fitCenter"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/img_bkg"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/img_bkg"
-        app:layout_constraintTop_toTopOf="@+id/img_bkg"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
         app:srcCompat="@drawable/ic_logo" />
 
     <TextView
         android:id="@+id/tv_c_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="24dp"
+        android:fontFamily="@font/tahoma_bold"
+        android:gravity="center"
         android:text="@string/eymobyle_name"
+        android:textColor="@color/colorSecundaryText"
         app:layout_constraintEnd_toEndOf="@+id/img_logo"
         app:layout_constraintStart_toStartOf="@+id/img_logo"
         app:layout_constraintTop_toBottomOf="@+id/img_logo" />
@@ -68,37 +76,52 @@
         android:id="@+id/tv_c_street"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/tahoma"
+        android:gravity="center"
         android:text="@string/street"
+        android:textColor="@color/colorSecundaryText"
         app:layout_constraintEnd_toEndOf="@+id/tv_c_name"
         app:layout_constraintStart_toStartOf="@+id/tv_c_name"
         app:layout_constraintTop_toBottomOf="@+id/tv_c_name" />
 
     <TextView
         android:id="@+id/tv_value_peyment"
-        android:layout_width="66dp"
-        android:layout_height="18dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:fontFamily="@font/tahoma_bold"
+        android:gravity="center"
         android:text="00"
+        android:textColor="@color/colorSecundaryText"
+        android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="@+id/tv_c_street"
         app:layout_constraintStart_toStartOf="@+id/tv_c_street"
         app:layout_constraintTop_toBottomOf="@+id/tv_c_street" />
 
     <TextView
         android:id="@+id/tv_type_peyment"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
-        app:layout_constraintTop_toBottomOf="@+id/tv_value_peyment"
-        tools:layout_editor_absoluteX="182dp" />
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/tahoma"
+        android:textAlignment="center"
+        android:textColor="@color/colorSecundaryText"
+        app:layout_constraintEnd_toEndOf="@+id/tv_value_peyment"
+        app:layout_constraintStart_toStartOf="@+id/tv_value_peyment"
+        app:layout_constraintTop_toBottomOf="@+id/tv_value_peyment" />
 
     <TextView
         android:id="@+id/tv_date_peyment"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
-        app:layout_constraintTop_toBottomOf="@+id/tv_type_peyment"
-        tools:layout_editor_absoluteX="194dp" />
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/tahoma"
+        android:gravity="center"
+        android:textSize="10dp"
+        android:text="@string/date_payment"
+        android:textColor="@color/colorSecundaryText"
+        app:layout_constraintEnd_toEndOf="@+id/tv_value_peyment"
+        app:layout_constraintStart_toStartOf="@+id/tv_value_peyment"
+        app:layout_constraintTop_toBottomOf="@+id/tv_type_peyment" />
 </androidx.constraintlayout.widget.ConstraintLayout>
